--- a/src/components/VerticalVideo/index.scss
+++ b/src/components/VerticalVideo/index.scss
@@ -23,6 +23,9 @@ $animSpeedIn: 0.5s;
     width: 100%;
     height: auto;
     transform: translate(-50%, 0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     .vv-video {
       display: block;
