--- a/src/components/VerticalVideo/index.scss
+++ b/src/components/VerticalVideo/index.scss
@@ -16,6 +16,36 @@ $backOpacity: 0.9;
     box-sizing: border-box;
   }
 
+  .vv-video-mask-container {
+    position: absolute;
+    pointer-events: none;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    display: none;
+    &.vv-horz {
+      display: block;
+    }
+    .vv-video-mask-left {
+      position: absolute;
+      background-color: rgba(0, 0, 0, 1);
+      top: 0;
+      left: 0;
+      width: auto;
+      height: 100%;
+    }
+    .vv-video-mask-right {
+      position: absolute;
+      background-color: rgba(0, 0, 0, 1);
+      top: 0;
+      right: 0;
+      width: auto;
+      height: 100%;
+    }
+  }
+
   .vv-video-container {
     position: absolute;
     top: 0;
@@ -23,15 +53,28 @@ $backOpacity: 0.9;
     left: 50%;
     width: 100%;
     height: auto;
-    transform: translate(-50%, 0);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
+    // transform: translate(-50%, 0);
 
-    .vv-video {
-      display: block;
-      width: 100%;
-      height: auto;
+    &.vv-vert {
+      display: flex;
+      transform: translate(-50%, 0);
+      justify-content: center;
+      align-items: center;
+      .vv-video {
+        display: block;
+        width: 100%;
+        height: auto;
+      }
+    }
+
+    &.vv-horz {
+      height: 100%;
+      .vv-video {
+        display: block;
+        width: auto;
+        height: 100vh;
+      }
     }
   }
 
